typescript/checker/tests/conformance/internalModules/DeclarationMerging/AmbientModuleAndAmbientFunctionWithTheSameNameAndCommonRoot.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            217,
        ),
        hi: BytePos(
            219,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/internalModules/DeclarationMerging/AmbientModuleAndAmbientFunctionWithTheSameNameAndCommonRoot.ts:10:5
   |
10 | var cl: { x: number; y: number; }
   |     ^^

